--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,11 @@
     <module>ucloud-sdk-java-ulb</module>
     <module>ucloud-sdk-java-udisk</module>
     <module>ucloud-sdk-java-vpc</module>
+    <module>ucloud-sdk-java-common</module>
   </modules>
 
   <name>ucloud-sdk-java</name>
-  <url>http://www.example.com</url>
+  <url>http://www.ucloud.cn</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -32,6 +33,15 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.6</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
