添加ParamValidator工具类，ValidatorException,修改Param属性小驼峰，GetUHostInstanceVncInfoParam/Result

--- a/ucloud-sdk-java-common/pom.xml
+++ b/ucloud-sdk-java-common/pom.xml
@@ -17,6 +17,17 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.el</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
