--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
     <maven.compiler.target>1.7</maven.compiler.target>
     <junit.version>4.11</junit.version>
     <httpclient.version>4.5.6</httpclient.version>
+    <validator.version>6.0.12.Final</validator.version>
+    <el.version>3.0.1-b08</el.version>
   </properties>
 
   <dependencyManagement>
@@ -44,6 +46,20 @@
         <artifactId>httpclient</artifactId>
         <version>${httpclient.version}</version>
       </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-validator</artifactId>
+        <version>${validator.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.glassfish</groupId>
+        <artifactId>javax.el</artifactId>
+        <version>${el.version}</version>
+      </dependency>
+
 
     </dependencies>
 
