--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     <httpclient.version>4.5.6</httpclient.version>
     <validator.version>6.0.12.Final</validator.version>
     <el.version>3.0.1-b08</el.version>
+    <gson.version>2.8.5</gson.version>
   </properties>
 
   <dependencyManagement>
@@ -58,6 +59,13 @@
         <groupId>org.glassfish</groupId>
         <artifactId>javax.el</artifactId>
         <version>${el.version}</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+      <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>${gson.version}</version>
       </dependency>
 
 
