--- a/ucloud-sdk-java-uhost/pom.xml
+++ b/ucloud-sdk-java-uhost/pom.xml
@@ -28,6 +28,11 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
