--- a/ucloud-sdk-java-udisk/pom.xml
+++ b/ucloud-sdk-java-udisk/pom.xml
@@ -11,5 +11,23 @@
 
     <artifactId>ucloud-sdk-java-udisk</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>cn.ucloud</groupId>
+            <artifactId>ucloud-sdk-java-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+
+
+    </dependencies>
 </project>
