--- a/ucloud-sdk-java-ulb/pom.xml
+++ b/ucloud-sdk-java-ulb/pom.xml
@@ -12,4 +12,16 @@
     <artifactId>ucloud-sdk-java-ulb</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>cn.ucloud</groupId>
+            <artifactId>ucloud-sdk-java-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+    </dependencies>
 </project>
