--- a/ucloud-sdk-java-unet/pom.xml
+++ b/ucloud-sdk-java-unet/pom.xml
@@ -11,5 +11,18 @@
 
     <artifactId>ucloud-sdk-java-unet</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>cn.ucloud</groupId>
+            <artifactId>ucloud-sdk-java-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+    </dependencies>
+
 
 </project>
