--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
     <el.version>3.0.1-b08</el.version>
     <gson.version>2.8.5</gson.version>
     <lang.version>3.8</lang.version>
+    <codec.version>1.9</codec.version>
   </properties>
 
   <dependencyManagement>
@@ -75,12 +76,44 @@
         <version>${lang.version}</version>
       </dependency>
 
+      <dependency>
+        <groupId>commons-codec</groupId>
+        <artifactId>commons-codec</artifactId>
+        <version>${codec.version}</version>
+      </dependency>
+
+
     </dependencies>
+
+
+
 
   </dependencyManagement>
 
 
   <build>
-    
+
+    <plugins>
+
+      <!-- 编译插件-->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.6.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+      <!-- 跳过单测的部分插件-->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.18.1</version>
+        <configuration>
+          <skipTests>true</skipTests>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
