--- a/ucloud-sdk-java-uhost/pom.xml
+++ b/ucloud-sdk-java-uhost/pom.xml
@@ -29,6 +29,10 @@
             <artifactId>junit</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+        </dependency>
 
     </dependencies>
 
