--- a/ucloud-sdk-java-unet/pom.xml
+++ b/ucloud-sdk-java-unet/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>ucloud-sdk-java</artifactId>
         <groupId>cn.ucloud</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.6-release</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>cn.ucloud</groupId>
             <artifactId>ucloud-sdk-java-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>0.6-release</version>
         </dependency>
 
         <dependency>
