--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
   <name>ucloud-sdk-java</name>
   <url>http://www.ucloud.cn</url>
-
+  <description>ucloud-sdk-java</description>
 
   <licenses>
     <license>
@@ -149,6 +149,27 @@
           <skipTests>true</skipTests>
         </configuration>
       </plugin>
+      <!--java doc-->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.10.4</version>
+        <configuration>
+          <!--指定编码为UTF-8-->
+          <encoding>UTF-8</encoding>
+          <charset>UTF-8</charset>
+          <docencoding>UTF-8</docencoding>
+          <additionalparam>-Xdoclint:none</additionalparam>
+        </configuration>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
       <!--配置生成源码包-->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -163,7 +184,22 @@
           </execution>
         </executions>
       </plugin>
-
+      <!-- GPG 验签 -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <version>1.6</version>
+        <executions>
+          <execution>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
+
+
 </project>
