--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>cn.ucloud</groupId>
     <artifactId>ucloud-sdk-java</artifactId>
     <packaging>pom</packaging>
-    <version>0.6.3-release</version>
+    <version>0.6.3.1-release</version>
     <modules>
         <module>ucloud-sdk-java-uhost</module>
         <module>ucloud-sdk-java-unet</module>
@@ -16,6 +16,7 @@
         <module>ucloud-sdk-java-vpc</module>
         <module>ucloud-sdk-java-common</module>
         <module>ucloud-sdk-java-ufs</module>
+        <module>ucloud-sdk-java-udb</module>
     </modules>
 
     <name>ucloud-sdk-java</name>
