--- a/ucloud-sdk-java-udb/pom.xml
+++ b/ucloud-sdk-java-udb/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ucloud-sdk-java-uhost</artifactId>
+    <artifactId>ucloud-sdk-java-udb</artifactId>
     <version>0.6.3.1-release</version>
 
     <dependencies>
@@ -18,6 +18,7 @@
             <artifactId>ucloud-sdk-java-common</artifactId>
             <version>0.6.3.1-release</version>
         </dependency>
+
 
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -29,20 +30,5 @@
             <artifactId>junit</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-        </dependency>
-
-
     </dependencies>
-
 </project>
