--- a/ucloud-sdk-java-udb/pom.xml
+++ b/ucloud-sdk-java-udb/pom.xml
@@ -30,5 +30,9 @@
             <artifactId>junit</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.skyscreamer</groupId>
+            <artifactId>jsonassert</artifactId>
+        </dependency>
     </dependencies>
 </project>
