--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,11 @@
-# Created by .ignore support plugin (hsz.mobi)
-### Java template
-# Compiled class file
 *.class
 
-# Log file
 *.log
 
-# BlueJ files
 *.ctxt
 
-# Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
 *.jar
 *.war
 *.nar
@@ -21,11 +14,8 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-.idea
-ucloud-sdk-java.iml
-*/*.DS_Store
+.*
+*.iml
 */target
 target
-.DS_Store
+
