--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ sonar_analyze:
   stage: test
   image: uhub.service.ucloud.cn/sonarqube/maven:3.6.0-jdk-8-ali-mirror
   script:
-    - mvn compile sonar:sonar -Dsonar.host.url=$SONAR_HOST -Dsonar.login=$SONAR_TOKEN -Dsonar.issuesReport.html.enable=true -Dsonar.projectKey=$CI_PROJECT_PATH_SLUG -Dsonar.gitlab.project_id=$CI_PROJECT_ID -Dsonar.gitlab.commit_sha=$CI_COMMIT_SHA -Dsonar.gitlab.ref_name=$CI_COMMIT_REF_NAME
+    - mvn compile sonar:sonar -Dsonar.host.url=$SONAR_HOST -Dsonar.login=$SONAR_TOKEN -Dsonar.issuesReport.html.enable=true -Dsonar.projectKey=$CI_PROJECT_PATH_SLUG -Dsonar.gitlab.project_id=$CI_PROJECT_ID -Dsonar.gitlab.commit_sha=$CI_COMMIT_SHA -Dsonar.gitlab.ref_name=$CI_COMMIT_REF_NAME -Dsonar.cpd.exclusions=ucloud-sdk-java-*/src/main/java/cn/ucloud/*/model/**,cloud-sdk-java-*/src/test/**
   only:
   - master
   tags:
