--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
         <gson.version>2.8.5</gson.version>
         <lang.version>3.8</lang.version>
         <codec.version>1.9</codec.version>
+        <slf4j.version>1.7.25</slf4j.version>
     </properties>
 
     <dependencyManagement>
@@ -104,14 +105,14 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>1.7.25</version>
+                <version>${slf4j.version}</version>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-simple</artifactId>
-                <version>1.7.25</version>
+                <version>${slf4j.version}</version>
                 <scope>provided</scope>
             </dependency>
 
