--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>ucloud-sdk-java-ufs</module>
         <module>ucloud-sdk-java-udb</module>
         <module>ucloud-sdk-java-udpn</module>
+        <module>ucloud-sdk-java-pathx</module>
     </modules>
 
     <name>ucloud-sdk-java</name>
