--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,6 @@
         <module>ucloud-sdk-java-pathx</module>
         <module>ucloud-sdk-java-usql</module>
         <module>ucloud-sdk-java-umem</module>
-        <module>ucloud-sdk-java-uai</module>
         <module>ucloud-sdk-java-ocr</module>
     </modules>
 
@@ -73,6 +72,7 @@
         <maven.compiler.target>1.7</maven.compiler.target>
         <junit.version>4.11</junit.version>
         <httpclient.version>4.5.6</httpclient.version>
+        <httpmime.version>4.5.6</httpmime.version>
         <validator.version>6.0.12.Final</validator.version>
         <el.version>3.0.1-b08</el.version>
         <gson.version>2.8.5</gson.version>
@@ -106,6 +106,15 @@
                 <artifactId>httpclient</artifactId>
                 <version>${httpclient.version}</version>
             </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpmime -->
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpmime</artifactId>
+                <version>${httpmime.version}</version>
+            </dependency>
+
+
 
             <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
             <dependency>
