--- a/ucloud-sdk-java-pathx/pom.xml
+++ b/ucloud-sdk-java-pathx/pom.xml
@@ -7,9 +7,11 @@
         <groupId>cn.ucloud</groupId>
         <version>0.8.2.2-release</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
+    <modelVersion>4.0.0</modelVersion>
+    <version>0.8.2.2-release</version>
     <artifactId>ucloud-sdk-java-pathx</artifactId>
+
     <dependencies>
         <dependency>
             <groupId>cn.ucloud</groupId>
