--- a/ucloud-sdk-java-censor/pom.xml
+++ b/ucloud-sdk-java-censor/pom.xml
@@ -7,9 +7,10 @@
         <groupId>cn.ucloud</groupId>
         <version>0.8.2.2-release</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
+    <modelVersion>4.0.0</modelVersion>
     <artifactId>ucloud-sdk-java-censor</artifactId>
+    <version>0.8.2.2-release</version>
 
     <dependencies>
         <dependency>
