--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>ucloud-sdk-java-ocr</module>
         <module>ucloud-sdk-java-usms</module>
         <module>ucloud-sdk-java-ubill</module>
+        <module>ucloud-sdk-java-ucdn</module>
     </modules>
 
     <name>ucloud-sdk-java</name>
