chore: add codecov & sonar

--- a/pom.xml
+++ b/pom.xml
@@ -47,8 +47,7 @@
         <module>ucloud-sdk-java-uec</module>
 
 
-        <module>ucloud-sdk-java-ufile</module>
-
+        <module>ucloud-sdk-java-
 
         <module>ucloud-sdk-java-umem</module>
 
