--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
-  build:
+  lint:
     name: Build
     runs-on: ubuntu-latest
     steps:
