chore: fix codecov

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -19,7 +19,7 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Run tests
-        run: --batch-mode --update-snapshots test
+        run: mvn --batch-mode --update-snapshots test
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
