--- a/ucloud-sdk-java-common/pom.xml
+++ b/ucloud-sdk-java-common/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <artifactId>ucloud-sdk-java</artifactId>
         <groupId>cn.ucloud</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0-release</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ucloud-sdk-java-common</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0-release</version>
 
     <dependencies>
         <dependency>
